--- a/detoks/src/main/res/layout/fragment_benchmark.xml
+++ b/detoks/src/main/res/layout/fragment_benchmark.xml
@@ -25,6 +25,7 @@
             android:textColor="#eeebe3"
             android:textSize="24sp"
             />
+        <!-- Layout for all buttons -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -32,135 +33,166 @@
             android:orientation="vertical"
             android:gravity="center"
             >
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-
-                android:text="Selected receiver:"
-                />
-            <!-- Text view to show Peer 1's IP-->
-            <TextView
-                android:id="@+id/other_peers"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text=""
-                />
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:layout_gravity="center"
-                >
-                <Button
-                    android:id="@+id/select_receiver_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Select Receiver"
-                    android:onClick="selectPeer"
-                    />
-            </LinearLayout>
+            <!-- Layout for receiver -->
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_weight="1">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Transaction amount: "
-                        android:textStyle="bold"
-                        android:textColor="@color/black"
-                        android:layout_marginEnd="10dp"
-                        android:layout_gravity="center_horizontal"/>
-                    <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/transaction_amount_selector"
-                        android:layout_gravity="center_horizontal"
-                        android:ems="4"
-                        android:text=""
-                        android:outlineAmbientShadowColor="@color/colorPrimaryDark"
-                        android:inputType="number">
-                    </EditText>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_weight="1">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Grouping amount: "
-                        android:textStyle="bold"
-                        android:textColor="@color/black"
-                        android:layout_marginEnd="10dp"
-                        android:layout_gravity="center_horizontal"
-                        />
-                    <EditText
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/grouping_amount_selector"
-                        android:layout_gravity="center_horizontal"
-                        android:ems="4"
-                        android:text="10"
-                        android:outlineAmbientShadowColor="@color/colorPrimaryDark"
-                        android:inputType="number">
-                    </EditText>
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <Button
-                    android:id="@+id/start_transactions_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Group Transactions" />
-
-                <Button
-                    android:id="@+id/single_transactions_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Single Transactions" />
-
-            </LinearLayout>
-
-            <!-- Text Fields -->
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:gravity="center">
-
-                <TextView
-                    android:id="@+id/transactions_per_second_field"
+                >
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0 ms"
-                    android:layout_marginEnd="10dp" />
-
-                <TextView
-                    android:id="@+id/single_text_field"
+                    android:orientation="vertical"
+                    android:layout_weight="1">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:text="Selected receiver:"
+                        />
+                    <!-- Text view to show Peer 1's IP-->
+                    <TextView
+                        android:id="@+id/other_peers"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal"
+                        android:layout_marginHorizontal="10dp"
+                        android:text=""
+                        />
+                </LinearLayout>
+                <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="0 ms"
-                    android:layout_marginStart="10dp" />
+                    android:layout_weight="1">
+                    <Button
+                        android:id="@+id/select_receiver_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Select Receiver"
+                        android:onClick="selectPeer"
+                        />
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_weight="1">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Transaction amount: "
+                            android:textStyle="bold"
+                            android:textColor="@color/black"
+                            android:layout_marginEnd="10dp" />
+                        <EditText
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/transaction_amount_selector"
+                            android:ems="6"
+                            android:text="1000"
+                            android:outlineAmbientShadowColor="@color/colorPrimaryDark"
+                            android:inputType="number">
+                        </EditText>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="fill_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:layout_weight="1"
+                        android:paddingTop="7dp">
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Grouping amount: "
+                            android:textStyle="bold"
+                            android:textColor="@color/black"
+                            android:layout_marginEnd="10dp"
+                            />
+                        <EditText
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:id="@+id/grouping_amount_selector"
+                            android:ems="6"
+                            android:text="10"
+                            android:outlineAmbientShadowColor="@color/colorPrimaryDark"
+                            android:inputType="number">
+                        </EditText>
+                        <Button
+                            android:id="@+id/submit_settings"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="right"
+                            android:paddingVertical="10dp"
+                            android:text="save settings" />
+                    </LinearLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+
+                    <Button
+                        android:id="@+id/single_transactions_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Single Transactions" />
+                    <TextView
+                        android:id="@+id/single_text_field"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0 ms"
+                        />
+                    <Button
+                        android:id="@+id/start_transactions_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Group Transactions" />
+                    <TextView
+                        android:id="@+id/transactions_per_second_field"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="0 ms"
+                        android:layout_marginEnd="10dp" />
+                    <Button
+                        android:id="@+id/single_token_button"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Send single token" />
+
+                    <TextView
+                        android:id="@+id/single_token_text"
+                        android:layout_width="94dp"
+                        android:layout_height="wrap_content"
+                        android:text="0 ms" />
+                </LinearLayout>
 
             </LinearLayout>
 
+
+
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:gravity="center_horizontal">
+
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="25dp">
                 <Button
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -171,23 +203,6 @@
                     android:layout_height="wrap_content"
                     android:text="Generate tokens"
                     android:id="@+id/generate_tokens_button"></Button>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:gravity="center_horizontal">
-                <Button
-                    android:id="@+id/single_token_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Send single token" />
-
-                <TextView
-                    android:id="@+id/single_token_text"
-                    android:layout_width="94dp"
-                    android:layout_height="wrap_content"
-                    android:text="0 ms" />
             </LinearLayout>
         </LinearLayout>
 
@@ -201,7 +216,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="20"
+                android:layout_weight="16"
                 android:orientation="horizontal">
 
                 <TextView
